--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
+</html><!DOCTYPE html>
+
 <html>
   <head>
-    <title>My 441 Site</title>
+    <meta charset="utf-8">
+    <title>MART 441 Homework Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/HW1/style.css">
+
+    <style>
+    
+
+    </style>
+
   </head>
+
+
   <body>
-    <h1>My 441 Homework Site</h1>
-    <p>This site contains my work for MART 441.</p>
-  </body>
+
+    <div class="hero">
+
+      <div class="hero-text">
+        <h1>Naomi Birkett</h1>
+
+         <h4>Welcome to my MART 441 Web Technologies homework page!</h4>
+      </div>
+
+    </div>
+
+    <div class="about">
+
+        <h2>About Me</h2>
+
+        <img src="HW1/imgs/Birkett_SelfPortrait.jpg" alt="Image of a cool person with cool hair">
+
+        <p>I'm an artist, gamer, lifelong learner, and metal head! I'm currently a junior working on a Media Arts major online with a minor in Sociology.
+        </p>
+
+        <h2>My Favorite Things:</h2>
+
+        <ul>
+             <li>Video games</li>
+             <li>Heavy metal music</li>
+             <li>Making cool art</li>
+        </ul>
+
+        <p>
+          My current favorite game:
+            <a href="https://store.steampowered.com/agecheck/app/1086940/">Balder's Gate 3</a>
+        </p>
+
+        <p>My favorite band:
+            <a href="https://lornashoreband.com/?srsltid=AfmBOoomQ8JchTAoY2eJUN9eBAl4JYDyfNsYzGMtHqO4eL2qerlAYENN">Lorna Shore</a>
+        </p>
+
+    </div>
+
+    <div class="favorites">
+
+        <h2>Games & Me</h2>
+
+        <p>Games have always been a big part of my life. When I was a little kid, whenever we had a little extra money, my dad would rent an old Super Nintendo game system and some games from the convenience store up the road. We would spend all weekend playing Super Mario or the SNES Lion King game. My dad was would play Mario until he had the max 99 lives and then hand the controller over to me and my little sisters, who would promptly lose all his lives by playing badly.
+        </p>
+
+        <p>A fun fact about me: I met my husband playing World of Warcraft!</p>
+
+    </div>
+
+ </body>
+
+
 </html>
