--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>MART 441 Homework Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/HW1/style.css">
+    <link rel="stylesheet" href="HW1/style.css">
 
     <style>
     
@@ -55,7 +55,7 @@
 
     </div>
 
-    <div class="favorites">
+    <div class="games">
 
         <h2>Games & Me</h2>
 
